fix(core): use translateZ by default on swiper slide to make it less flicker in Safari

--- a/src/core/core.less
+++ b/src/core/core.less
@@ -40,6 +40,7 @@
   height: 100%;
   position: relative;
   transition-property: transform;
+  transform: translateZ(0);
 }
 .swiper-slide-invisible-blank {
   visibility: hidden;
